@@ -45,16 +45,10 @@ brlman \- display manual pages for BRL-CAD software
 title
 .SH DESCRIPTION
 .I Brlman
-provides a substitute for the
+invokes the system
 .I man
-command for those systems that do not
-have
-.I nroff.
-Henry Spencer's
-.I nroff -man
-replacement called
-.I awf
-is used instead.
+command with the path information needed to display BRL-CAD
+man pages.
 .I Brlman
 uses the environment variable
 .I MANPATH
@@ -64,11 +58,7 @@ is the default). The pager used is taken from the environment variable
 .I MANPAGER
 or, if that is nor set
 .I PAGER
-is used. The default is to use the
-.I more -s -f
-command.
-.SH "SEE ALSO"
-awf(1)
+is used. 
 .SH AUTHOR
 Michael John Muuss
 .SH "BUG REPORTS"
